Float out of about polaroids

--- a/about/about.html
+++ b/about/about.html
@@ -6,39 +6,39 @@ layout: about
 
 <div id="border">
 <div id="box">
-	<div class="photo" style="margin: 50px 150px; position: absolute; float: left; z-index: 8;">
+	<div class="photo" style="margin: 50px 150px; position: absolute; z-index: 8;">
 		<div class="photobox persona"></div>
 		Who i am
 	</div>
-	<div class="photo" style="margin: 310px 275px; position: absolute; transform: rotate(-10deg); float: left; z-index: 3;">
+	<div class="photo" style="margin: 310px 275px; position: absolute; transform: rotate(-10deg); z-index: 3;">
 		<div class="photobox projects"></div>
 		Projects
 	</div>
-		<div class="photo" style="margin: 310px 600px; position: absolute; float: left; z-index: 2;">
+		<div class="photo" style="margin: 310px 600px; position: absolute; z-index: 2;">
 		<div class="photobox experience"></div>
 		Experience
 	</div>
-	<div class="photo" style="margin: 100px 350px; position: absolute; transform: rotate(-20deg); float: left; z-index: 5;">
+	<div class="photo" style="margin: 100px 350px; position: absolute; transform: rotate(-20deg); z-index: 5;">
 		<div class="photobox education"></div>
 		Education
 	</div>
-	<div class="photo" style="margin: 75px 550px; position: absolute; transform: rotate(20deg); float: left; z-index: 6;">
+	<div class="photo" style="margin: 75px 550px; position: absolute; transform: rotate(20deg); z-index: 6;">
 		<div class="photobox tech"></div>
 		Technical knowledge
 	</div>
-	<div class="photo" style="margin: 50px 740px; position: absolute; float: right; z-index: 7;">
+	<div class="photo" style="margin: 50px 740px; position: absolute; z-index: 7;">
 		<div class="photobox program"></div>
 		Program knowledge
 	</div>
-	<div class="photo" style="margin: 50px 975px; position: absolute; transform: rotate(-10deg); float: right; z-index: 1;">
+	<div class="photo" style="margin: 50px 975px; position: absolute; transform: rotate(-10deg); z-index: 1;">
 		<div class="photobox hobby"></div>
 		What i like to do
 	</div>
-	<div class="photo" style="margin: 275px 850px; position: absolute; transform: rotate(-25deg); float: right; z-index: 9;">
+	<div class="photo" style="margin: 275px 850px; position: absolute; transform: rotate(-25deg); z-index: 9;">
 		<div class="photobox else"></div>
 		Extra info
 	</div>
-		<div class="photo" style="margin: 275px 1075px; position: absolute; transform: rotate(20deg); float: right; z-index: 4;">
+		<div class="photo" style="margin: 275px 1075px; position: absolute; transform: rotate(20deg); z-index: 4;">
 		<div class="photobox mail"></div>
 		Contact me
 	</div>
@@ -46,4 +46,3 @@ layout: about
 </div>
 
 
-<!-- Style="transform: rotate(20deg);" -->
