Modals and content

--- a/about/about.html
+++ b/about/about.html
@@ -2,47 +2,211 @@
 layout: about
 ---
 
-<div id="me">That's me!</div>
+<div class="me">That's me!</div>
+<div><a href="/index.html" class="back">Back to menu</a></div>
 
-<div id="border">
-<div id="box">
-	<div class="photo" style="margin: 50px 150px; position: absolute; z-index: 8;">
-		<div class="photobox persona"></div>
-		Who i am
+<div class="box, border">
+
+<div class="polo" style="z-index: 8;">
+	<img src="/about/assets/images/me.png" class="photobox" type="button" data-modal="demo-1">Who I am
+</div>
+	
+	<div class="dqpl-modal" role="dialog" id="demo-1">
+	  <div class="dqpl-modal-inner">
+	    <div class="dqpl-modal-header">
+	      <h2>That's me!</h2>
+	    </div>
+	    <div class="dqpl-modal-content">
+	      <p>Mijn naam is Sandra Vos - Van Geest en ben nu bijna tien jaar werkzaam in het basisonderwijs in de functie van leerkracht op een grote school. In deze jaren heb ik veel ervaring opgedaan en geleerd, maar ben ook tot de conclusie gekomen dat het voor de klas staan mij niet langer de voldoening geeft die ik in mijn werk zoek. Ik heb het roer omgegooid en ben gaan uitzoeken wat mij wel energie geeft. Ik vind het leuk om met computers bezig te zijn en wanneer ik projectmatig en creatief kan werken. Daarom ben ik mij gaan specialiseren binnen de IT en met name Front end Webdevelopment.</p>
+
+				<p>Waarom webdeveloper? Om de schakel te kunnen zijn tussen het design en de programmatuur, het kunnen ontwerpen, programmeren, testen en implementeren van het front-end gedeelte en daarnaast bezig zijn met UI vraagstukken en toegankelijkheid vind ik leuk, uitdagend en inspirerend. Ik kan er mijn creativiteit in kwijt, maar ook biedt het mij de intellectuele uitdaging die ik zoek.</p>
+
+				<p>Om ervaring op te doen loop ik, naast mijn huidige baan, stage. Hier heb ik gewerkt aan een productwebsite voor Deque (een Amerikaans software bedrijf). Daarbij ging veel aandacht naar de toegankelijkheid, gericht op mensen met een beperking, van de site. Deze site is sinds een paar weken klaar en zal in juni/juli gelanceerd worden. Met toestemming van Deque kunt u op https://axe-core.org/ de site al bekijken. Daarnaast studeer ik twee avonden per week om me zo de benodigde technische kennis eigen te maken.</p>
+	    </div>
+	    <div class="dqpl-modal-footer">
+	      <button class="dqpl-modal-cancel" type="button">Back</button>
+	    </div>
+	  </div>
 	</div>
-	<div class="photo" style="margin: 310px 275px; position: absolute; transform: rotate(-10deg); z-index: 3;">
-		<div class="photobox projects"></div>
-		Projects
-	</div>
-		<div class="photo" style="margin: 310px 600px; position: absolute; z-index: 2;">
-		<div class="photobox experience"></div>
-		Experience
-	</div>
-	<div class="photo" style="margin: 100px 350px; position: absolute; transform: rotate(-20deg); z-index: 5;">
-		<div class="photobox education"></div>
-		Education
-	</div>
-	<div class="photo" style="margin: 75px 550px; position: absolute; transform: rotate(20deg); z-index: 6;">
-		<div class="photobox tech"></div>
-		Technical knowledge
-	</div>
-	<div class="photo" style="margin: 50px 740px; position: absolute; z-index: 7;">
-		<div class="photobox program"></div>
-		Program knowledge
-	</div>
-	<div class="photo" style="margin: 50px 975px; position: absolute; transform: rotate(-10deg); z-index: 1;">
-		<div class="photobox hobby"></div>
-		What i like to do
-	</div>
-	<div class="photo" style="margin: 275px 850px; position: absolute; transform: rotate(-25deg); z-index: 9;">
-		<div class="photobox else"></div>
-		Extra info
-	</div>
-		<div class="photo" style="margin: 275px 1075px; position: absolute; transform: rotate(20deg); z-index: 4;">
-		<div class="photobox mail"></div>
-		Contact me
-	</div>
-	</div>
+
+<div class="polo" style="margin: 310px 275px; position: absolute; transform: rotate(-10deg); z-index: 3;">
+	<img src="/about/assets/images/projects.png" class="photobox" type="button" data-modal="demo-2">Projects</div>
+
+<div class="dqpl-modal" role="dialog" id="demo-2">
+  <div class="dqpl-modal-inner">
+    <div class="dqpl-modal-header">
+      <h2>Projects</h2>
+    </div>
+    <div class="dqpl-modal-content">
+      <p>This is a modal with just text in it and stuff.</p>
+    </div>
+    <div class="dqpl-modal-footer">
+      <button class="dqpl-modal-cancel" type="button">Back</button>
+    </div>
+  </div>
+</div>
+
+<div class="polo" style="margin: 310px 600px; position: absolute; float: left; z-index: 2;">
+	<img src="/about/assets/images/experience.png" class="photobox" type="button" data-modal="demo-3">Experience</div>
+
+<div class="dqpl-modal" role="dialog" id="demo-3">
+  <div class="dqpl-modal-inner">
+    <div class="dqpl-modal-header">
+      <h2>Experience</h2>
+    </div>
+    <div class="dqpl-modal-content">
+      <p>2017 <br/> Front end Webdevelopment <br/> Deque, Hilversum <br/>
+			<i>Building the aXe website (HTML5, CSS3, Java Script, Bootstrap en Jekyll)<i></p>
+
+			<p>2016-2017<br/>Internship Front end Webdevelopment <br/> Deque, Hilversum
+			<i>Website design aXe van Deque<i><br/>
+			<i>Building the aXe website (HTML5, CSS3, Java Script, Bootstrap en Jekyll)<i></p>
+
+			<p>2016 <br/>	Internship Graphic Designer <br/> Academy Software Studio, Utrecht <br/>
+			<i>Logo design for webbased computergame (Cyclo Online)<i><br/>
+			<i>Designing images for website and crowdfunding<i><p>
+
+			<p>2007-now <br/> Teacher Primary School <br/> De Boomgaard, Utrecht<br/>
+			<i>Teacher<i><br/>
+			<i>Training new teachers<i><br/>
+			<i>Kindergarden coordinator <br/>
+			<i>Coordinator NME (Natuur en Milieu Educatie (Nature and Enviroment Education))<i><br/>
+			<i>Coordinator VVE (Voor- en Vroegschoolse Educatie (Preschool Education))<i></p>
+    </div>
+    <div class="dqpl-modal-footer">
+      <button class="dqpl-modal-cancel" type="button">Back</button>
+    </div>
+  </div>
+</div>
+
+<div class="polo" style="margin: 100px 350px; position: absolute; transform: rotate(-20deg); float: left; z-index: 5;">
+	<img src="/about/assets/images/education.png" class="photobox" type="button" data-modal="demo-4">Education</div>
+
+<div class="dqpl-modal" role="dialog" id="demo-4">
+  <div class="dqpl-modal-inner">
+    <div class="dqpl-modal-header">
+      <h2>Education</h2>
+    </div>
+    <div class="dqpl-modal-content">
+      <p>2006-2007 <br/> Master Special Educational Needs (WO) <br/> Windesheim Den Haag</p>
+			<p>2003-2006 <br/> Lerarenopleiding Basisonderwijs (HBO) <br/> Hogeschool Rotterdam</p>
+			<p>1999-2003 <br/> Onderwijsassistent (MBO) <br/> Zadkine college te Spijkenisse</p>
+			<p>1995-1999 <br/> Mavo <br/> Bahurîm te Brielle</p>
+    </div>
+    <div class="dqpl-modal-footer">
+      <button class="dqpl-modal-cancel" type="button">Back</button>
+    </div>
+  </div>
+</div>
+
+<div class="polo" style="margin: 75px 550px; position: absolute; transform: rotate(20deg); float: left; z-index: 6;">
+	<img src="/about/assets/images/tech.png" class="photobox" type="button" data-modal="demo-5">Technical knowledge</div>
+
+<div class="dqpl-modal" role="dialog" id="demo-5">
+  <div class="dqpl-modal-inner">
+    <div class="dqpl-modal-header">
+      <h2>Technical Knowledge</h2>
+    </div>
+    <div class="dqpl-modal-content">
+      <p>HTML5</p>
+      <p>CSS3</p>
+      <p>Basis JavaScript (bezig met cursus)</p>
+      <p>Bootstrap</p>
+      <p>Jekyll</p>
+    </div>
+    <div class="dqpl-modal-footer">
+      <button class="dqpl-modal-cancel" type="button">Back</button>
+    </div>
+  </div>
+</div>
+
+<div class="polo" style="margin: 50px 740px; position: absolute; z-index: 7;">
+	<img src="/about/assets/images/program.png" class="photobox" type="button" data-modal="demo-6">Program knowledge</div>
+
+<div class="dqpl-modal" role="dialog" id="demo-6">
+  <div class="dqpl-modal-inner">
+    <div class="dqpl-modal-header">
+      <h2>Program knowledge</h2>
+    </div>
+    <div class="dqpl-modal-content">
+      <p>Photoshop</p>
+      <p>Illustrator</p>
+    </div>
+    <div class="dqpl-modal-footer">
+      <button class="dqpl-modal-cancel" type="button">Back</button>
+    </div>
+  </div>
+</div>
+
+<div class="polo" style="margin: 50px 975px; position: absolute; transform: rotate(-10deg); z-index: 1;">
+	<img src="/about/assets/images/hobby.png" class="photobox" type="button" data-modal="demo-7">What I like to do</div>
+
+<div class="dqpl-modal" role="dialog" id="demo-7">
+  <div class="dqpl-modal-inner">
+    <div class="dqpl-modal-header">
+      <h2>What I like to do</h2>
+    </div>
+    <div class="dqpl-modal-content">
+      <p>I love playing board- and computergames! I really enjoy being together with friends and play games like Panic Station, Alchemists or Mansions of Madness. My alltime favorite computergame is and remains Zelda, but i'm always up for any adventuregame. I also like to read, mostly fantasy and novals, and go to the movies (it can't be scary enough for me!), but unfortunately I don't always have the time.</p> 
+
+      <p>When I do have time I like to sew medival- and fantasycostumes which I wear to certain events (fairs and LARP). I find it relaxing when designing and working on an outfit. Last but not least I like to travel to foreign country's. I love to explore the history and enjoy the art and architecture of a building, city or country.</p>
+    </div>
+    <div class="dqpl-modal-footer">
+      <button class="dqpl-modal-cancel" type="button">Back</button>
+    </div>
+  </div>
+</div>
+
+<div class="polo" style="margin: 275px 850px; position: absolute; transform: rotate(-25deg); z-index: 9;">
+	<img src="/about/assets/images/extra.png" class="photobox" type="button" data-modal="demo-8">Extra info</div>
+
+<div class="dqpl-modal" role="dialog" id="demo-8">
+  <div class="dqpl-modal-inner">
+    <div class="dqpl-modal-header">
+      <h2>Extra information</h2>
+    </div>
+    <div class="dqpl-modal-content">
+      <p>Courses and Training</p>
+      <p>2016-now<br/>Javascript</p>
+      <p>2016<br/>
+      Git<br/>
+      HTML5 & CSS3<br/>
+      Breinsleutels<br/>
+			Grafische Vormgeving (Illustrator en Photoshop)</p>
+			<p>2015<br/>Coaching (gecertificeerd coach)</p>
+			<p>2014<br/>Kunstgeschiedenis<br/>
+			Spelend leren praten<br/>
+			Het jonge ESM (ernstige spraak- en/of taalmoeilijkheden) kind</p>
+			<p>2013<br/>Kunstgeschiedenis</p>
+			<p>2010<br/>Met sprongen vooruit groep 1/2</p>
+			<p>2009<br/>Train de VVE-coördinator<br/>
+			VVE Taalrijk</p>
+    </div>
+    <div class="dqpl-modal-footer">
+      <button class="dqpl-modal-cancel" type="button">Back</button>
+    </div>
+  </div>
+</div>
+
+<div class="polo" style="margin: 280px 1075px; position: absolute; transform: rotate(20deg); z-index: 4;">
+	<img src="/about/assets/images/contact.png" class="photobox" type="button" data-modal="demo-9">Contact me</div>
+
+<div class="dqpl-modal" role="dialog" id="demo-9">
+  <div class="dqpl-modal-inner">
+    <div class="dqpl-modal-header">
+      <h2>Contact me</h2>
+    </div>
+    <div class="dqpl-modal-content">
+      <p>GhostFox</p>
+      <p>t: +31 6 29 30 80 59<br/>
+				e: sandravosvangeest@gmail.com<br/></p>
+			<p>You can look me up at <a href="https://www.linkedin.com/in/sandra-vos-van-geest-03684b50/">LinkedIn</a>!</p>
+    </div>
+    <div class="dqpl-modal-footer">
+      <button class="dqpl-modal-cancel" type="button">Back</button>
+    </div>
+  </div>
+</div>
 </div>
 
 
