Borderfix, focusfix, headerfix

--- a/about/about.html
+++ b/about/about.html
@@ -2,16 +2,16 @@
 layout: about
 ---
 
-<div class="me">That's me!</div>
-<div><a href="/index.html" class="back">Back to menu</a></div>
+<div id="left"></div>
+<div id="right"></div>
+<div id="top"></div>
+<div id="bottom"></div>
 
-<div class="box, border">
-
-<div class="polo" style="z-index: 8;">
-	<img src="/about/assets/images/me.png" class="photobox" type="button" data-modal="demo-1">Who I am
+<div class="polo" style="margin: 50px 160px; z-index: 8;" >
+	<button class="photobox pictureabout" type="Button" data-modal="demo-1"></button>This is me!
 </div>
 	
-	<div class="dqpl-modal" role="dialog" id="demo-1">
+  <div class="dqpl-modal" role="dialog" id="demo-1">
 	  <div class="dqpl-modal-inner">
 	    <div class="dqpl-modal-header">
 	      <h2>That's me!</h2>
@@ -30,7 +30,8 @@ layout: about
 	</div>
 
 <div class="polo" style="margin: 310px 275px; position: absolute; transform: rotate(-10deg); z-index: 3;">
-	<img src="/about/assets/images/projects.png" class="photobox" type="button" data-modal="demo-2">Projects</div>
+	<button class="photobox pictureproject" type="Button" data-modal="demo-2" alt="Image of a buste"></button>Projects
+</div>
 
 <div class="dqpl-modal" role="dialog" id="demo-2">
   <div class="dqpl-modal-inner">
@@ -47,7 +48,8 @@ layout: about
 </div>
 
 <div class="polo" style="margin: 310px 600px; position: absolute; float: left; z-index: 2;">
-	<img src="/about/assets/images/experience.png" class="photobox" type="button" data-modal="demo-3">Experience</div>
+	<button class="photobox pictureexperience" type="Button" data-modal="demo-3" alt="Image of the Sony Center op Potsdamer Platz, Berlin"></button>Experience
+</div>
 
 <div class="dqpl-modal" role="dialog" id="demo-3">
   <div class="dqpl-modal-inner">
@@ -80,9 +82,10 @@ layout: about
 </div>
 
 <div class="polo" style="margin: 100px 350px; position: absolute; transform: rotate(-20deg); float: left; z-index: 5;">
-	<img src="/about/assets/images/education.png" class="photobox" type="button" data-modal="demo-4">Education</div>
+	<button class="photobox pictureeducation" type="Button" data-modal="demo-4" alt="Image of a pond"></button>Education
+</div>
 
-<div class="dqpl-modal" role="dialog" id="demo-4">
+ <div class="dqpl-modal" role="dialog" id="demo-4">
   <div class="dqpl-modal-inner">
     <div class="dqpl-modal-header">
       <h2>Education</h2>
@@ -100,7 +103,8 @@ layout: about
 </div>
 
 <div class="polo" style="margin: 75px 550px; position: absolute; transform: rotate(20deg); float: left; z-index: 6;">
-	<img src="/about/assets/images/tech.png" class="photobox" type="button" data-modal="demo-5">Technical knowledge</div>
+	<button class="photobox picturetech" type="Button" data-modal="demo-5" alt="Image of a screen with coding"></button>Technical knowledge
+</div>
 
 <div class="dqpl-modal" role="dialog" id="demo-5">
   <div class="dqpl-modal-inner">
@@ -121,7 +125,8 @@ layout: about
 </div>
 
 <div class="polo" style="margin: 50px 740px; position: absolute; z-index: 7;">
-	<img src="/about/assets/images/program.png" class="photobox" type="button" data-modal="demo-6">Program knowledge</div>
+	<button class="photobox pictureprogram" type="Button" data-modal="demo-6" alt="Image of a drawn logo of a cycleshirt"></button>Program knowledge
+</div>
 
 <div class="dqpl-modal" role="dialog" id="demo-6">
   <div class="dqpl-modal-inner">
@@ -139,7 +144,8 @@ layout: about
 </div>
 
 <div class="polo" style="margin: 50px 975px; position: absolute; transform: rotate(-10deg); z-index: 1;">
-	<img src="/about/assets/images/hobby.png" class="photobox" type="button" data-modal="demo-7">What I like to do</div>
+	<button class="photobox picturehobby" type="Button" data-modal="demo-7" alt="Image of dice"></button>What I like to do
+</div>
 
 <div class="dqpl-modal" role="dialog" id="demo-7">
   <div class="dqpl-modal-inner">
@@ -158,9 +164,10 @@ layout: about
 </div>
 
 <div class="polo" style="margin: 275px 850px; position: absolute; transform: rotate(-25deg); z-index: 9;">
-	<img src="/about/assets/images/extra.png" class="photobox" type="button" data-modal="demo-8">Extra info</div>
+	 <button class="photobox pictureextra" type="Button" data-modal="demo-8" alt="Image of a rusted flower on a gate"></button>Extra info
+</div>
 
-<div class="dqpl-modal" role="dialog" id="demo-8">
+ <div class="dqpl-modal" role="dialog" id="demo-8">
   <div class="dqpl-modal-inner">
     <div class="dqpl-modal-header">
       <h2>Extra information</h2>
@@ -189,8 +196,9 @@ layout: about
 </div>
 
 <div class="polo" style="margin: 280px 1075px; position: absolute; transform: rotate(20deg); z-index: 4;">
-	<img src="/about/assets/images/contact.png" class="photobox" type="button" data-modal="demo-9">Contact me</div>
-
+	<button class="photobox picturecontact" type="Button" data-modal="demo-9" alt="Image of a hot airballoon in the clouds"></button>Contact me
+</div>
+ 
 <div class="dqpl-modal" role="dialog" id="demo-9">
   <div class="dqpl-modal-inner">
     <div class="dqpl-modal-header">
