Working on responsiveness

--- a/about/about.html
+++ b/about/about.html
@@ -7,8 +7,19 @@ layout: about
 <div id="top"></div>
 <div id="bottom"></div>
 
+
+<img src="assets/images/me.png" class="aboutphoto">
+<img src="assets/images/projects.png" class="aboutphoto">
+<img src="assets/images/experience.png" class="aboutphoto">
+<img src="assets/images/education.png" class="aboutphoto">
+<img src="assets/images/tech.png" class="aboutphoto">
+<img src="assets/images/program.png" class="aboutphoto">
+<img src="assets/images/hobby.png" class="aboutphoto">
+<img src="assets/images/extra.png" class="aboutphoto">
+<img src="assets/images/contact.png" class="aboutphoto">
+
 <div class="polo" style="margin: 50px 160px; z-index: 8;" >
-	<button class="photobox pictureabout" type="Button" data-modal="demo-1"></button>This is me!
+	<button class="photobox pictureabout" type="button" data-modal="demo-1" aria-label="This is me!"></button>This is me!
 </div>
 	
   <div class="dqpl-modal" role="dialog" id="demo-1">
@@ -30,7 +41,7 @@ layout: about
 	</div>
 
 <div class="polo" style="margin: 310px 275px; position: absolute; transform: rotate(-10deg); z-index: 3;">
-	<button class="photobox pictureproject" type="Button" data-modal="demo-2" alt="Image of a buste"></button>Projects
+	<button class="photobox pictureproject" type="Button" data-modal="demo-2" aria-label="My projects"></button>Projects
 </div>
 
 <div class="dqpl-modal" role="dialog" id="demo-2">
@@ -48,7 +59,7 @@ layout: about
 </div>
 
 <div class="polo" style="margin: 310px 600px; position: absolute; float: left; z-index: 2;">
-	<button class="photobox pictureexperience" type="Button" data-modal="demo-3" alt="Image of the Sony Center op Potsdamer Platz, Berlin"></button>Experience
+	<button class="photobox pictureexperience" type="Button" data-modal="demo-3" aria-label="My workexperience"></button>Workexperience
 </div>
 
 <div class="dqpl-modal" role="dialog" id="demo-3">
@@ -82,7 +93,7 @@ layout: about
 </div>
 
 <div class="polo" style="margin: 100px 350px; position: absolute; transform: rotate(-20deg); float: left; z-index: 5;">
-	<button class="photobox pictureeducation" type="Button" data-modal="demo-4" alt="Image of a pond"></button>Education
+	<button class="photobox pictureeducation" type="Button" data-modal="demo-4" aria-label="My education"></button>Education
 </div>
 
  <div class="dqpl-modal" role="dialog" id="demo-4">
@@ -103,7 +114,7 @@ layout: about
 </div>
 
 <div class="polo" style="margin: 75px 550px; position: absolute; transform: rotate(20deg); float: left; z-index: 6;">
-	<button class="photobox picturetech" type="Button" data-modal="demo-5" alt="Image of a screen with coding"></button>Technical knowledge
+	<button class="photobox picturetech" type="Button" data-modal="demo-5" aria-label="My technical knowledge"></button>Technical knowledge
 </div>
 
 <div class="dqpl-modal" role="dialog" id="demo-5">
@@ -125,7 +136,7 @@ layout: about
 </div>
 
 <div class="polo" style="margin: 50px 740px; position: absolute; z-index: 7;">
-	<button class="photobox pictureprogram" type="Button" data-modal="demo-6" alt="Image of a drawn logo of a cycleshirt"></button>Program knowledge
+	<button class="photobox pictureprogram" type="Button" data-modal="demo-6" aria-label="My program knowledge"></button>Program knowledge
 </div>
 
 <div class="dqpl-modal" role="dialog" id="demo-6">
@@ -144,7 +155,7 @@ layout: about
 </div>
 
 <div class="polo" style="margin: 50px 975px; position: absolute; transform: rotate(-10deg); z-index: 1;">
-	<button class="photobox picturehobby" type="Button" data-modal="demo-7" alt="Image of dice"></button>What I like to do
+	<button class="photobox picturehobby" type="Button" data-modal="demo-7" aria-label="My hobbies"></button>What I like to do
 </div>
 
 <div class="dqpl-modal" role="dialog" id="demo-7">
@@ -164,7 +175,7 @@ layout: about
 </div>
 
 <div class="polo" style="margin: 275px 850px; position: absolute; transform: rotate(-25deg); z-index: 9;">
-	 <button class="photobox pictureextra" type="Button" data-modal="demo-8" alt="Image of a rusted flower on a gate"></button>Extra info
+	 <button class="photobox pictureextra" type="Button" data-modal="demo-8" aria-label="Extra information"></button>Extra info
 </div>
 
  <div class="dqpl-modal" role="dialog" id="demo-8">
@@ -196,7 +207,7 @@ layout: about
 </div>
 
 <div class="polo" style="margin: 280px 1075px; position: absolute; transform: rotate(20deg); z-index: 4;">
-	<button class="photobox picturecontact" type="Button" data-modal="demo-9" alt="Image of a hot airballoon in the clouds"></button>Contact me
+	<button class="photobox picturecontact" type="Button" data-modal="demo-9" aria-label="Contactinformation"></button>Contact me
 </div>
  
 <div class="dqpl-modal" role="dialog" id="demo-9">
