Make MLBA story background
Center the mainpage

--- a/about/about.html
+++ b/about/about.html
@@ -7,16 +7,16 @@ layout: about
 <div id="top"></div>
 <div id="bottom"></div>
 
+    <img src="assets/images/me.png" class="aboutphoto">
+    <img src="assets/images/projects.png" class="aboutphoto">
+    <img src="assets/images/experience.png" class="aboutphoto">
+    <img src="assets/images/education.png" class="aboutphoto">
+    <img src="assets/images/tech.png" class="aboutphoto">
+    <img src="assets/images/program.png" class="aboutphoto">
+    <img src="assets/images/hobby.png" class="aboutphoto">
+    <img src="assets/images/extra.png" class="aboutphoto">
+    <img src="assets/images/contact.png" class="aboutphoto">
 
-<img src="assets/images/me.png" class="aboutphoto">
-<img src="assets/images/projects.png" class="aboutphoto">
-<img src="assets/images/experience.png" class="aboutphoto">
-<img src="assets/images/education.png" class="aboutphoto">
-<img src="assets/images/tech.png" class="aboutphoto">
-<img src="assets/images/program.png" class="aboutphoto">
-<img src="assets/images/hobby.png" class="aboutphoto">
-<img src="assets/images/extra.png" class="aboutphoto">
-<img src="assets/images/contact.png" class="aboutphoto">
 
 <div class="polo" style="margin: 50px 160px; z-index: 8;" >
 	<button class="photobox pictureabout" type="button" data-modal="demo-1" aria-label="This is me!"></button>This is me!
@@ -222,7 +222,7 @@ layout: about
 			<p>You can look me up at <a href="https://www.linkedin.com/in/sandra-vos-van-geest-03684b50/">LinkedIn</a>!</p>
     </div>
     <div class="dqpl-modal-footer">
-      <button class="dqpl-modal-cancel" type="button">Back</button>
+      <button class="dqpl-modal-cancel back" type="button">Back</button>
     </div>
   </div>
 </div>
