--- a/mlba/index.html
+++ b/mlba/index.html
@@ -2,4 +2,10 @@
 layout: mlba
 ---
 
-<h1>Whoop!</h1>
+<h1>Proloque</h1>
+<p>In a little town called Briëlle lived a Baron. His name was Leendert of Heymans. He lived there with his lovely wife Arja and their little daughter Maeve. Maeve..... who didn't know her! She was called princess Maeve as she was so spoiled by her parents. She'd always get her way and if someone dared to say "no", Maeve would burst into a tantrum. To avoid that, her parents gave her everything.</p>
+
+<p>One fine day you, an adventurer loyal to the Baron, got summoned by the Baron himself. When you arrive the baron sits behind his desk, working. 'Ah, there you are,' he mutters while looking up from his papers. 'My little princess needs a new toy, a special one. I want you to go into the woods and get one at the toymaker. As you know he lives in a small cottage in the woods. Grab a weapon on the way out, if you like. Off you go!' And the Baron gets back to work.</p>	 
+
+<a class="next" href="/mlba/weapon.html">Off I go!</a>
+
